--- a/RepasoEnero/CSS/style.css
+++ b/RepasoEnero/CSS/style.css
@@ -1,30 +1,17 @@
 body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-  }
-  .card {
-    width: 300px;
-    padding: 20px;
-    margin: 10px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  h2 {
-    color: #333;
-  }
-  p {
-    color: #666;
-  }
-  img {
-    width: 15vw;
-  }
-  .card:hover {
-    transform: scale(1.5);
-  }
+    background: linear-gradient(120deg, #8ecae6, #219ebc);
+}
+
+.card {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+.card:hover {
+    box-shadow: 0 12px 32px rgba(0, 0, 0, 0.2);
+    transform: scale(1.01);
+}
+
+#headerLI:hover {
+    background-color: black;
+}
